# bevy_pointcloud

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_LICENCES.md  build_wasm.sh  build_wasm_dev.sh  build_wasm_worker.sh  rustfmt.toml  serve.js
.zed/: settings.json
assets/copc/: dl.sh
examples/: copc.rs  copc_wasm.rs  loader.rs  potree.rs  potree_wasm.rs  simple.rs  viewer.rs
examples/helpers/: camera_controller.rs
examples/ui/: components.rs  events.rs  helpers.rs  messages.rs  mod.rs  resources.rs
src/: bevy.rs  lib.rs  point_cloud.rs  point_cloud_material.rs
src/loader/: mod.rs
src/loader/las/: mod.rs
src/loader/ply/: mod.rs
src/new_potree/: component.rs  extract.rs  loader.rs  mod.rs
src/octree/: asset.rs  extract.rs  hierarchy.rs  mod.rs  node.rs  render_asset.rs  storage.rs
src/octree/eviction/: mod.rs  resources.rs
src/octree/extract/: allocate.rs  buffer.rs  eviction.rs  limiter.rs  mod.rs  prepare.rs  render_asset.rs  resources.rs
src/octree/extract/render/: asset.rs  buffer.rs  components.rs  extract.rs  mod.rs  node.rs  prepare.rs  resources.rs
src/octree/loader/: mod.rs
src/octree/new_asset/: asset.rs  hierarchy.rs  loader.rs  mod.rs  node.rs  server.rs  visibility.rs
src/octree/new_asset/extract/: limiter.rs  mod.rs  prepare.rs  render_asset.rs  resources.rs
src/octree/new_asset/loader/: mod.rs
src/octree/new_asset/server/: mod.rs  process.rs  resources.rs
src/octree/new_asset/visibility/: budget.rs  components.rs  filter.rs  mod.rs  resources.rs  stack.rs
src/octree/server/: mod.rs  process.rs  resources.rs  systems.rs  task.rs
src/octree/visibility/: budget.rs  components.rs  extract.rs  filter.rs  heap_guard.rs  mod.rs  prepare.rs  resources.rs  stack.rs
src/octree_loader/: mod.rs
src/octree_loader/copc/: classification.rs  density.rs  http_source.rs  mod.rs
src/point_cloud/: mod.rs
src/pointcloud/: mod.rs
src/pointcloud_octree/: asset.rs  component.rs  extract.rs  mod.rs  potree.rs  visibility.rs  visible_nodes_texture.rs
src/pointcloud_octree/asset/: data.rs  extract.rs  mod.rs
src/pointcloud_octree/new_asset/: component.rs  extract.rs  mod.rs
src/pointcloud_octree/new_asset/render/: data.rs  draw.rs  mod.rs  phase.rs  prepare.rs
src/pointcloud_octree/new_asset/render/attribute_pass/: mod.rs  node.rs  phase.rs
src/pointcloud_octree/new_asset/render/depth_pass/: mod.rs  node.rs
src/pointcloud_octree/potree/: asset.rs  mapping.rs  mod.rs  snapshot.rs
src/pointcloud_octree/render/: data.rs  draw.rs  indirect.rs  mesh.rs  mod.rs  node.rs  nodes_mapping.rs  phase.rs  pipeline.rs  point_cloud.wgsl  prepare.rs  render_node.rs  visibility.rs
src/pointcloud_octree/render/attribute_pass/: mod.rs  node.rs  phase.rs
src/pointcloud_octree/render/depth_pass/: mod.rs  node.rs  phase.rs
src/potree/: asset.rs  gizmo.rs  hierarchy.rs  loader.rs  mapping.rs  mod.rs  point_cloud.rs  points.rs  prelude.rs  spawn_async_task.rs
src/render/: aabb.rs  components.rs  custom_uniform.rs  draw.rs  extract.rs  eye_dome_lighting.rs  material.rs  mesh.rs  mod.rs  node.rs  normalize.wgsl  phase.rs  point_cloud.rs  point_cloud.wgsl  point_cloud_uniform.rs  pointcloud.wgsl
src/render/attribute_pass/: mod.rs  node.rs  phase.rs  pipeline.rs  texture.rs
src/render/depth_pass/: mod.rs  node.rs  phase.rs  pipeline.rs  texture.rs
src/render/normalize_pass/: eye_dome_lighting.rs  mod.rs  node.rs  pipeline.rs  texture.rs
src/render/post_process/: mod.rs  node.rs  pipeline.rs  texture.rs
wasm/: index.html
