[package]
name = "bevy_pointcloud"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rlamarche/bevy_pointcloud"
license = "MIT"
description = "A Bevy plugin to render point clouds."
resolver = "2"

[[example]]
name = "potree"
required-features = ["potree"]

[[example]]
name = "loader"
required-features = ["potree"]

[lib]
name = "bevy_pointcloud"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
bevy_app = { version = "0.17" }
bevy_camera = { version = "0.17" }
bevy_ecs = { version = "0.17" }
bevy_pbr = { version = "0.17" }
bevy_render = { version = "0.17" }
bevy_core_pipeline = { version = "0.17" }
bevy_asset = { version = "0.17" }
bevy_log = { version = "0.17" }
bevy_math = { version = "0.17" }
bevy_mesh = { version = "0.17" }
bevy_shader = { version = "0.17" }
bevy_derive = { version = "0.17" }
bevy_reflect = { version = "0.17" }
bevy_transform = { version = "0.17" }
bevy_platform = { version = "0.17" }
bevy_utils = { version = "0.17" }
bevy_image = { version = "0.17" }
bevy_color = { version = "0.17" }
bytemuck = "1"
nonmax = "0.5"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
las = { version = "0.9", features = ["laz"], optional = true }
ply-rs = { version = "0.1.3", optional = true }

# Added for octree
slab = "0.4"

# Added for potree
futures = "0.3"
bevy_gizmos = { version = "0.17" }
bevy_tasks = { version = "0.17" }
potree = { path = "../potree-rs", default-features = false, optional = true }
crossbeam = { version = "0.8", features = [
    "crossbeam-channel",
    "crossbeam-queue",
] }
async-channel = "2.5"
async-lock = "3.4"
async-trait = "0.1"

wasm-bindgen = { version = "=0.2.100", optional = true }
wasm-bindgen-futures = { version = "=0.4.50", optional = true }
wasm_thread = { version = "0.3.3", optional = true }

bevy_rich_text3d = "0.5.1"


parking_lot = { version = "0.12" }

[dev-dependencies]
bevy = { version = "0.17", features = ["bevy_dev_tools"] }
rand = "0.9"
bevy_panorbit_camera = "0.29"
bevy-inspector-egui = "0.35.0"

[features]
default = ["ply", "las"]
webgl = [
    "bevy_core_pipeline/webgl",
    "bevy_pbr/webgl",
    "bevy_render/webgl",
    "bevy_gizmos/webgl",
]
webgpu = []
ply = ["dep:ply-rs"]
las = ["dep:las"]
potree = ["dep:potree"]
potree_wasm = ["potree/wasm"]
potree_wasm_worker = ["potree/wasm_worker", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:wasm_thread"]
potree_fs = ["potree/fs"]
potree_async_fs = ["potree/async-fs"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js"] }
