[package]
name = "bevy_pointcloud"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rlamarche/bevy_pointcloud"
license = "MIT"
description = "A Bevy plugin to render point clouds."
resolver = "2"

[[example]]
name = "potree"
required-features = ["potree", "potree_fs", "potree_ehttp"]

[[example]]
path = "examples/potree_wasm.rs"
name = "potree_wasm"
required-features = ["potree_wasm"]

[[example]]
path = "examples/potree_wasm.rs"
name = "potree_wasm_worker"
required-features = ["potree_wasm_worker"]

[lib]
name = "bevy_pointcloud"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
bevy_app = { version = "0.17" }
bevy_camera = { version = "0.17" }
bevy_ecs = { version = "0.17" }
bevy_pbr = { version = "0.17" }
bevy_render = { version = "0.17" }
bevy_core_pipeline = { version = "0.17" }
bevy_asset = { version = "0.17" }
bevy_log = { version = "0.17" }
bevy_math = { version = "0.17" }
bevy_mesh = { version = "0.17" }
bevy_shader = { version = "0.17" }
bevy_derive = { version = "0.17" }
bevy_reflect = { version = "0.17" }
bevy_transform = { version = "0.17" }
bevy_platform = { version = "0.17" }
bevy_utils = { version = "0.17" }
bevy_image = { version = "0.17" }
bevy_color = { version = "0.17" }
bevy_diagnostic = { version = "0.17" }
bevy_time = { version = "0.17" }

smallvec = { version = "1", default-features = false }

bytemuck = "1"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
las = { version = "0.9", features = ["laz"], optional = true }
ply-rs = { version = "0.1.3", optional = true }

# Added for octree
slab = "0.4"

# Added for potree
bevy_gizmos = { version = "0.17" }
bevy_tasks = { version = "0.17" }
potree = { path = "../potree-rs", default-features = false, optional = true }
crossbeam = { version = "0.8", features = [
    "crossbeam-channel",
    "crossbeam-queue",
] }
async-trait = "0.1"
ordered-float = "5.1.0"

wasm-bindgen = { version = "=0.2.106", optional = true }
wasm-bindgen-futures = { version = "=0.4.56", optional = true }
wasm_thread = { version = "0.3.3", optional = true }

priority-queue = "2.7.0"

[dev-dependencies]
bevy_dev_tools = { version = "0.17" }
rand = "0.9"
bevy_panorbit_camera = { version = "0.33.1", features = ["bevy_egui"] }
egui = { version = "0.33.0", default-features = false }
bevy_egui = "0.38.0"
bevy_input = { version = "0.17" }
bevy_window = { version = "0.17" }
bevy_text = { version = "0.17" }
bevy_light = { version = "0.17" }
bevy_pbr = { version = "0.17" }
bevy-inspector-egui = "0.35.0"

[dev-dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "std",
    "async_executor",
#    "android-game-activity",
#    "android_shared_stdcxx",
#    "animation",
    "bevy_asset",
#    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_anti_alias",
    "bevy_gilrs",
    "bevy_gizmos",
#    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
#    "custom_cursor",
    "default_font",
#    "hdr",
#    "ktx2",
    "multi_threaded",
#    "png",
#    "reflect_auto_register",
#    "smaa_luts",
#    "sysinfo_plugin",
    "tonemapping_luts",
#    "vorbis",
    "webgl2",
    "x11",
    "wayland",
    "debug",
    "zstd_rust",
]

[features]
default = ["las", "ply"]
trace = []
trace_tracy = ["trace", "bevy/trace_tracy"]
multi_threaded = []
webgl = [
    "bevy_core_pipeline/webgl",
    "bevy_pbr/webgl",
    "bevy_render/webgl",
    "bevy_gizmos/webgl",
]
webgpu = []
ply = ["dep:ply-rs"]
las = ["dep:las"]
wasm_worker = ["dep:wasm_thread", "multi_threaded"]
potree = ["dep:potree"]
potree_reqwest = ["potree/reqwest"]
potree_ehttp = ["potree/ehttp"]
potree_ehttp_local = ["potree/ehttp_local"]
potree_wasm = ["potree/wasm"]
potree_wasm_worker = ["wasm_worker", "potree/wasm_worker", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
potree_fs = ["potree/fs"]
potree_async_fs = ["potree/async-fs"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
lto = true
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", default-features = false, features = ["wasm_js"] }
